# kittybrowse

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
crates/rust-vm-bridge/: Cargo.toml
crates/rust-vm-bridge/src/: lib.rs  main.rs
docs/: apl-wasm-runtime.md  kitty-protocol-v1.md  nats-rust-bridge.md
lineage/: kittybrowse-shadow-handshake.json
plugins/ide/vscode/: kitty.plugin.json
plugins/vm/apl-wasm/: kitty.plugin.json
plugins/vm/rust/: kitty.plugin.json
scripts/: copy-renderer.mjs  validate-handshake.mjs  write-handshake.mjs
src/main/: main.ts  preload.ts
src/renderer/: index.html  renderer.js  styles.css
src/runtime/: adapters.ts  agent-runtime.ts  mesh.ts  plugins.ts
src/shared/: entropy.ts  protocol.ts
tests/: entropy.test.ts  handshake.test.ts  runtime.test.ts
