[package]
name = "rust-vm-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-nats = "0.49"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
